Image stretch issue fixed

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -3,6 +3,7 @@
 }
 
 .list-image-height{
+	width: 50px;
 	height: 50px;
 }
 
@@ -13,4 +14,9 @@
 .addlink{
 	float: left;
   padding-left: 15px;
+}
+
+.profile-img{
+	height: 30px!important;
+	width: 30px!important;
 }
